@@ -61,7 +61,7 @@ JSDOC.Walker.prototype.step = function() {
 			
 			var matching = this.ts.getMatchingToken("LEFT_CURLY");
 			if (matching) matching.popNamescope = name;
-			else LOG.warn("Mismatched } character. Can't parse code.");
+			else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			
 			this.lastDoc = null;
 			return true;
@@ -122,7 +122,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken(null, "RIGHT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// function foo() {}
 			else if (this.ts.look(-1).is("FUNCTION") && this.ts.look(1).is("LEFT_PAREN")) {
@@ -149,7 +149,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// foo = function() {}
 			else if (this.ts.look(1).is("ASSIGN") && this.ts.look(2).is("FUNCTION")) {
@@ -180,7 +180,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// foo = new function() {}
 			else if (this.ts.look(1).is("ASSIGN") && this.ts.look(2).is("NEW") && this.ts.look(3).is("FUNCTION")) {
@@ -212,7 +212,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// foo: function() {}
 			else if (this.ts.look(1).is("COLON") && this.ts.look(2).is("FUNCTION")) {
@@ -245,7 +245,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// foo = {}
 			else if (this.ts.look(1).is("ASSIGN") && this.ts.look(2).is("LEFT_CURLY")) {
@@ -270,7 +270,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// var foo;
 			else if (this.ts.look(1).is("SEMICOLON")) {
@@ -327,7 +327,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 			// foo: x
 			else if (this.ts.look(1).is("COLON")) {
@@ -375,7 +375,7 @@ JSDOC.Walker.prototype.step = function() {
 				
 				var matching = this.ts.getMatchingToken("LEFT_CURLY");
 				if (matching) matching.popNamescope = name;
-				else LOG.warn("Mismatched } character. Can't parse code.");
+				else LOG.warn("Mismatched } character. Can't parse code in file " + symbol.srcFile + ".");
 			}
 		}
 	}
